--- a/index.html
+++ b/index.html
@@ -14,7 +14,20 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="animation-area">
+    <div class="container">
+      <div class="flex-item info">
+        <h1>Control Information</h1>
+      </div>
+
+      <div class="flex-item config">
+        <p class="object-form address">192. 168. xx. xx</p>
+        <div class="button-flock">
+          <button href="#">Click Me!</button>
+        </div>
+      </div>
+    </div>
+
+    <div>
       <ul class="box-area">
         <li></li>
         <li></li>
@@ -23,13 +36,6 @@
         <li></li>
         <li></li>
       </ul>
-    </div>
-
-    <div class="container">
-      <div class="flex-item info">
-        <h1>Control Information</h1>
-      </div>
-      <div class="flex-item config"> Config </div>
     </div>
   </body>
 </html>
