--- a/index.html
+++ b/index.html
@@ -22,12 +22,15 @@
       <div class="flex-item config">
         <p class="object-form address">192. 168. xx. xx</p>
         <div class="button-flock">
-          <button href="#">Click Me!</button>
+          <button href="#" class="object-button button1">Click Me!</button>
+          <button href="#" class="object-button button1">Click Me!</button>
+          <button href="#" class="object-button button1">Click Me!</button>
+          <button href="#" class="object-button button1">Click Me!</button>
         </div>
       </div>
     </div>
 
-    <div>
+    <div class="animation-area">
       <ul class="box-area">
         <li></li>
         <li></li>
