--- a/index.html
+++ b/index.html
@@ -17,15 +17,23 @@
     <div class="container">
       <div class="flex-item info">
         <h1>Control Information</h1>
+        <div class="info-item item1">
+          <img src="citra/weather.svg" alt="temperature">
+          <h2><span id="temperature-value">25</span>&#8451;</h2>
+        </div>
+        <div class="info-item item1">
+          <img src="citra/humidity.svg" alt="humidity">
+          <h2><span id="humidity-value">80</span>%</h2>
+        </div>
       </div>
 
       <div class="flex-item config">
         <p class="object-form address">192. 168. xx. xx</p>
         <div class="button-flock">
-          <button href="#" class="object-button button1">Click Me!</button>
-          <button href="#" class="object-button button1">Click Me!</button>
-          <button href="#" class="object-button button1">Click Me!</button>
-          <button href="#" class="object-button button1">Click Me!</button>
+          <button onclick="window.location.href=\"#\";" class="object-button button1">Click Me!</button>
+          <button onclick="window.location.href=\"#\";" class="object-button button1">Click Me!</button>
+          <button onclick="window.location.href=\"#\";" class="object-button button1">Click Me!</button>
+          <button onclick="window.location.href=\"#\";" class="object-button button1">Click Me!</button>
         </div>
       </div>
     </div>
