--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
       <div class="flex-item config">
         <p class="object-form address">192. 168. xx. xx</p>
         <div class="button-flock">
-          <button onclick="window.location.href=\"#\";" class="object-button button1">Click Me!</button>
-          <button onclick="window.location.href=\"#\";" class="object-button button1">Click Me!</button>
-          <button onclick="window.location.href=\"#\";" class="object-button button1">Click Me!</button>
-          <button onclick="window.location.href=\"#\";" class="object-button button1">Click Me!</button>
+          <button onclick="window.location.href='#';" class="object-button button1">Click Me!</button>
+          <button onclick="window.location.href='#';" class="object-button button1">Click Me!</button>
+          <button onclick="window.location.href='#';" class="object-button button1">Click Me!</button>
+          <button onclick="window.location.href='#';" class="object-button button1">Click Me!</button>
         </div>
       </div>
     </div>
